--- a/Anita/Server/Makefile
+++ b/Anita/Server/Makefile
@@ -1,12 +1,18 @@
 NAME = ircserv
 
-SRC_DIR = src
+#SRC_DIR = src
 
-SRC = main.cpp \
+SRC = server_main.cpp \
+			HelperFunctions.cpp \
+			ServerErrors.cpp \
+			Server.cpp \
+			../Client/Client.cpp
+
+
 
 CXX = c++
 STDFLAG = -std=c++98 -pedantic
-CXXFLAGS = -Wall -Wextra -Werror --g -I./inc
+CXXFLAGS = -Wall -Wextra -Werror -g #-I./inc
 RM = rm
 
 OBJ = $(SRC:.cpp=.o)
