--- a/Anita/Server/Makefile
+++ b/Anita/Server/Makefile
@@ -3,11 +3,10 @@ NAME = ircserv
 
 #SRC_DIR = src
 
-SRC = server_main.cpp \
-			HelperFunctions.cpp \
-			ServerErrors.cpp \
+SRC = main.cpp \
 			Server.cpp \
-			../Client/Client.cpp
+			Client.cpp 
+			#ServerErrors.cpp \
 
 
 
